--- a/index.html
+++ b/index.html
@@ -1,14 +1,124 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página caon carrito</title>
+    <title>Página con carrito</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
+    <header class="header">
+
+        <div class="menu container">
+
+            <a href="#" class="logo">Logo</a>
+
+            <input type="checkbox" id="menu" />
+            <label for="menu"><img src="images/menu.png" class="menu-icono" alt=""></label>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Productos</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </nav>
+
+            <div>
+                <ul class="submenu">
+                    <img src="images/car.svg" id="img-carrito" alt="">
+                    <div id="carrito">
+                        <table id="lista-carrito">
+                            <thead>
+                                <tr>
+                                    <th>Imagen</th>
+                                    <th>Nombre</th>
+                                    <th>Precio</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
+                        <a href="#" id="vaciar-carrito" class="btn-3">Vaciar Carrito</a>
+                    </div>
+                </ul>
+            </div>
+        </div>
+
+        <div class="header-content container">
+
+            <div class="swiper mySwiper-1">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="header-info">
+                            <div class="header-txt">
+                                <h1>Audifonos premium - Version 1</h1>
+                                <div class="prices">
+                                    <p class="price-1">$199</p>
+                                    <p class="price-2">$150</p>
+                                </div>
+                                <a href="#" class="btn-1">Información</a>
+                            </div>
+                        </div>
+                        <div class="header-img">
+                            <img src="images/bg1.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="header-info">
+                            <div class="header-txt">
+                                <h1>Audifonos premium - Version 1</h1>
+                                <div class="prices">
+                                    <p class="price-1">$199</p>
+                                    <p class="price-2">$150</p>
+                                </div>
+                                <a href="#" class="btn-1">Información</a>
+                            </div>
+                        </div>
+                        <div class="header-img">
+                            <img src="images/bg2.png" alt="">
+                        </div>
+
+                    </div>
+
+                    <div class="swiper-slide">
+
+                        <div class="header-info">
+                            <div class="header-txt">
+                                <h1>Audifonos premium - Version 1</h1>
+                                <div class="prices">
+                                    <p class="price-1">$199</p>
+                                    <p class="price-2">$150</p>
+                                </div>
+                                <a href="#" class="btn-1">Información</a>
+                            </div>
+                        </div>
+                        <div class="header-img">
+                            <img src="images/bg3.png" alt="">
+                        </div>
+
+                    </div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+
+        </div>
+
+
+    </header>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"></script>
     <script src="script.js"></script>
-    
+
 </body>
+
 </html>
