--- a/index.html
+++ b/index.html
@@ -115,6 +115,87 @@
 
     </header>
 
+    <hr>
+
+    <section class="promos container" id="lista-1">
+        <h2>Promociones</h2>
+
+        <div class="categories">
+
+            <div class="categorie">
+                <div class="categorie-1">
+                    <h3>Promo 1</h3>
+                    <div class="prices">
+                        <p class="price-1">$199</p>
+                        <p class="precio">$150</p>
+                    </div>
+                    <a href="#" class="agregar-carrito btn-3" data-id="1">Agregar al carrito</a>
+                </div>
+                <div class="categorie-img">
+                    <img src="images/ph1.png" alt="">
+                </div>
+            </div>
+
+            <div class="categorie">
+                <div class="categorie-1">
+                    <h3>Promo 1</h3>
+                    <div class="prices">
+                        <p class="price-1">$199</p>
+                        <p class="precio">$150</p>
+                    </div>
+                    <a href="#" class="agregar-carrito btn-3" data-id="1">Agregar al carrito</a>
+                </div>
+                <div class="categorie-img">
+                    <img src="images/ph2.png" alt="">
+                </div>
+            </div>
+
+            <div class="categorie">
+                <div class="categorie-1">
+                    <h3>Promo 2</h3>
+                    <div class="prices">
+                        <p class="price-1">$199</p>
+                        <p class="precio">$150</p>
+                    </div>
+                    <a href="#" class="agregar-carrito btn-3" data-id="1">Agregar al carrito</a>
+                </div>
+                <div class="categorie-img">
+                    <img src="images/ph2.png" alt="">
+                </div>
+            </div>
+
+            <div class="categorie">
+                <div class="categorie-1">
+                    <h3>Promo 3</h3>
+                    <div class="prices">
+                        <p class="price-1">$199</p>
+                        <p class="precio">$150</p>
+                    </div>
+                    <a href="#" class="agregar-carrito btn-3" data-id="1">Agregar al carrito</a>
+                </div>
+                <div class="categorie-img">
+                    <img src="images/ph3.png" alt="">
+                </div>
+            </div>
+
+            <div class="categorie">
+                <div class="categorie-1">
+                    <h3>Promo 4</h3>
+                    <div class="prices">
+                        <p class="price-1">$199</p>
+                        <p class="precio">$150</p>
+                    </div>
+                    <a href="#" class="agregar-carrito btn-3" data-id="1">Agregar al carrito</a>
+                </div>
+                <div class="categorie-img">
+                    <img src="images/ph4.png" alt="">
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"></script>
     <script src="script.js"></script>
