--- a/index.html
+++ b/index.html
@@ -138,26 +138,12 @@
 
             <div class="categorie">
                 <div class="categorie-1">
-                    <h3>Promo 1</h3>
-                    <div class="prices">
-                        <p class="price-1">$199</p>
-                        <p class="precio">$150</p>
-                    </div>
-                    <a href="#" class="agregar-carrito btn-3" data-id="1">Agregar al carrito</a>
-                </div>
-                <div class="categorie-img">
-                    <img src="images/ph2.png" alt="">
-                </div>
-            </div>
-
-            <div class="categorie">
-                <div class="categorie-1">
                     <h3>Promo 2</h3>
                     <div class="prices">
                         <p class="price-1">$199</p>
                         <p class="precio">$150</p>
                     </div>
-                    <a href="#" class="agregar-carrito btn-3" data-id="1">Agregar al carrito</a>
+                    <a href="#" class="agregar-carrito btn-3" data-id="2">Agregar al carrito</a>
                 </div>
                 <div class="categorie-img">
                     <img src="images/ph2.png" alt="">
@@ -171,7 +157,7 @@
                         <p class="price-1">$199</p>
                         <p class="precio">$150</p>
                     </div>
-                    <a href="#" class="agregar-carrito btn-3" data-id="1">Agregar al carrito</a>
+                    <a href="#" class="agregar-carrito btn-3" data-id="3">Agregar al carrito</a>
                 </div>
                 <div class="categorie-img">
                     <img src="images/ph3.png" alt="">
@@ -185,7 +171,7 @@
                         <p class="price-1">$199</p>
                         <p class="precio">$150</p>
                     </div>
-                    <a href="#" class="agregar-carrito btn-3" data-id="1">Agregar al carrito</a>
+                    <a href="#" class="agregar-carrito btn-3" data-id="4">Agregar al carrito</a>
                 </div>
                 <div class="categorie-img">
                     <img src="images/ph4.png" alt="">
@@ -193,6 +179,66 @@
             </div>
 
 
+        </div>
+    </section>
+
+    <hr>
+
+    <section class="products container" id="lista-2">
+
+        <h2>Nuevos Productos</h2>
+
+        <div class="swiper mySwiper-2">
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide">
+
+                    <div class="product">
+                        <img src="images/ph1.png" alt="">
+                        <div class="product-txt">
+                            <h3>Elisyum</h3>
+                            <p>calidad premium</p>
+                            <p class="precio">$200</p>
+                            <a href="#" class="agregar-carrito btn-3" data-id="5">Agregar al carrito</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="swiper-slide"></div>
+                <div class="product">
+                    <img src="images/ph2.png" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="6">Agregar al carrito</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide"></div>
+                <div class="product">
+                    <img src="images/ph3.png" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="7">Agregar al carrito</a>
+                    </div>
+                </div>
+                <div class="swiper-slide"></div>
+                <div class="product">
+                    <img src="images/ph4.png" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="8">Agregar al carrito</a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
         </div>
     </section>
 
