--- a/index.html
+++ b/index.html
@@ -242,6 +242,66 @@
         </div>
     </section>
 
+    <hr>
+
+    <section class="products container" id="lista-2">
+
+        <h2>Productos</h2>
+
+        <div class="swiper mySwiper-2">
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide">
+
+                    <div class="product">
+                        <img src="images/ph1.png" alt="">
+                        <div class="product-txt">
+                            <h3>Elisyum</h3>
+                            <p>calidad premium</p>
+                            <p class="precio">$200</p>
+                            <a href="#" class="agregar-carrito btn-3" data-id="9">Agregar al carrito</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="swiper-slide"></div>
+                <div class="product">
+                    <img src="images/ph2.png" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="10">Agregar al carrito</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide"></div>
+                <div class="product">
+                    <img src="images/ph3.png" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="11">Agregar al carrito</a>
+                    </div>
+                </div>
+                <div class="swiper-slide"></div>
+                <div class="product">
+                    <img src="images/ph4.png" alt="">
+                    <div class="product-txt">
+                        <h3>Elisyum</h3>
+                        <p>calidad premium</p>
+                        <p class="precio">$200</p>
+                        <a href="#" class="agregar-carrito btn-3" data-id="12">Agregar al carrito</a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+        </div>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"></script>
     <script src="script.js"></script>
