--- a/index.html
+++ b/index.html
@@ -302,7 +302,67 @@
         </div>
     </section>
 
+    <footer class="footer container">
 
+        <div class="link">
+
+            <h3>Lorem</h3>
+
+            <ul>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+            </ul>
+        </div>
+
+        <div class="link">
+
+            <h3>Lorem</h3>
+
+            <ul>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+            </ul>
+        </div>
+
+        <div class="link">
+
+            <h3>Lorem</h3>
+
+            <ul>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+            </ul>
+        </div>
+
+        <div class="link">
+
+            <h3>Lorem</h3>
+
+            <ul>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Lorem</a></li>
+            </ul>
+        </div>
+
+        <div class="link">
+
+            <h3>Lorem</h3>
+
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit inventore optio minima temporibus ipsum
+                neque iure, facilis repudiandae tempore saepe commodi.
+            </p>
+        </div>
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"></script>
     <script src="script.js"></script>
 
