estilo del footer y correción de ul en el html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             </nav>
 
             <div>
-                <ul class="submenu">
+                <ul>
+                    <li class="submenu">
                     <img src="images/car.svg" id="img-carrito" alt="">
                     <div id="carrito">
                         <table id="lista-carrito">
@@ -46,6 +47,7 @@
                         </table>
                         <a href="#" id="vaciar-carrito" class="btn-3">Vaciar Carrito</a>
                     </div>
+                    </li>
                 </ul>
             </div>
         </div>
