--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         </div>
 
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 
 </body>
